create table if not exists question_generation_document
(
    id             bigint generated by default as identity
        constraint pk_question_generation_document
            primary key,
    filename       varchar(500)             not null,
    file_extension varchar(10)              not null,
    file_size      bigint,
    status         varchar(30)              not null,

    created_at     timestamp with time zone not null default current_timestamp,
    updated_at     timestamp with time zone not null default current_timestamp,

    constraint chk_qg_document_status
        check (status in (
                          'UPLOADED',
                          'PROCESSING',
                          'READY',
                          'FAILED'
            )),

    constraint chk_qg_document_extension
        check (lower(file_extension) in (
                                         'pdf',
                                         'xlsx',
                                         'docx',
                                         'txt',
                                         'md',
                                         'csv'
            ))
);

create index if not exists idx_qg_document_filename
    on question_generation_document (filename);

create index if not exists idx_qg_document_extension
    on question_generation_document (file_extension);

create index if not exists idx_qg_document_status
    on question_generation_document (status);