-- document_id + section_number -> gives us a deterministic ordering
create table if not exists question_generation_section
(
    id                bigint generated by default as identity
        constraint pk_question_generation_section
            primary key,

    document_id       bigint                   not null
        constraint fk_qg_section_document
            references question_generation_document (id)
            on delete cascade,

    section_number    integer                  not null,
    title             varchar(1000),
    content           text                     not null,
    start_page_number integer,
    end_page_number   integer,
    token_count       integer,

    created_at        timestamp with time zone not null default current_timestamp,
    constraint uq_qg_section_document_number
        unique (document_id, section_number)
);

create index if not exists idx_qg_section_document
    on question_generation_section (document_id);

create index if not exists idx_qg_section_document_number
    on question_generation_section (document_id, section_number);